about text update

--- a/src/App.css
+++ b/src/App.css
@@ -331,6 +331,10 @@ img:hover {
 .profile {
   font-size: 0.9rem;
 }
+
+.grade {
+  color: var(--schopurp);
+}
 .item {
   padding: 0.5rem 0.8rem;
   background: var(--schogrey);
