--- a/src/App.css
+++ b/src/App.css
@@ -209,7 +209,9 @@ h3 {
 }
 
 h6 {
+  font-size: 1.1rem;
   font-weight: 600;
+  line-height: 1.5;
 }
 
 .smallerh1 {
@@ -320,7 +322,7 @@ img:hover {
 }
 
 .about h1 {
-  font-size: 3.5rem;
+  font-size: 3rem;
 }
 
 /* .profile {
