--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,14 @@
+body {
+  overflow-y: scroll;
+}
+
 .container {
   max-width: 1480px;
 }
 nav .container {
   max-width: 1920px;
-  padding-left: 50px;
-  padding-right: 50px;
+  padding-left: 60px;
+  padding-right: 60px;
 }
 
 :root {
@@ -17,17 +21,33 @@ nav .container {
   --schocyan: #62e8e8;
   --schogreen: #93f0a3;
   --schoaccent: #878d92;
+  --scholmbg: #e9e9e9;
+  --scholmfg: #1a1918;
+  --scholmpale: #dcdbdb;
 }
 
 html,
 body {
-  background: var(--schodark);
-  color: var(--scholight);
   font-family: neue-haas-grotesk-display, sans-serif;
   font-weight: 500;
   font-style: normal;
   font-size: 1.2rem;
 }
+
+main.dark-mode {
+  background: var(--schodark);
+  color: var(--scholight);
+}
+
+main.light-mode {
+  background: var(--scholmbg);
+  color: var(--scholmfg);
+}
+
+/* body {
+  background: var(--scholight);
+  color: var(--schodark);
+} */
 
 a {
   color: var(--scholime);
@@ -58,13 +78,14 @@ a:hover {
   align-items: flex-end;
 }
 
-.navbar-toggler.collapsed .navbar-toggler-icon {
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(0, 0, 0, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+.navbar-toggler:not(.collapsed) .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='2 2 12 12' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(0, 0, 0, 1)' stroke-width='0.6' stroke-linecap='round' stroke-miterlimit='10' d='M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708'/%3E%3C/svg%3E");
 }
 
-.navbar-toggler:not(.collapsed) .navbar-toggler-icon {
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(0, 0, 0, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+.navbar-toggler.collapsed .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(0, 0, 0, 1)' stroke-width='3' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
+
 nav .navbar-toggler {
   border: 0;
   padding: 0;
@@ -370,6 +391,10 @@ h6 {
   border-radius: 12px;
   display: flex;
   justify-content: center;
+}
+
+.light-mode .project {
+  background-color: var(--scholmpale);
 }
 
 .row.project:hover {
