--- a/src/App.css
+++ b/src/App.css
@@ -21,11 +21,13 @@ nav .container {
   --schocyan: #62e8e8;
   --schogreen: #93f0a3;
   --schoaccent: #878d92;
-  --scholmbg: #e9e9e9;
-  --scholmfg: #1a1918;
-  --scholmpale: #dcdbdb;
+  --schopearl: #eeeae7;
+  --schoonyx: #201f1d;
+  --schostone: #dfdbd8;
+  --schoclay: #cdc6c1;
+  --schoash: #71645b;
 }
-
+/* #685d55 */
 html,
 body {
   font-family: neue-haas-grotesk-display, sans-serif;
@@ -40,8 +42,8 @@ main.dark-mode {
 }
 
 main.light-mode {
-  background: var(--scholmbg);
-  color: var(--scholmfg);
+  background: var(--schopearl);
+  color: var(--schoonyx);
 }
 
 /* body {
@@ -185,10 +187,6 @@ button.g2:hover,
 .nav-link:hover {
   color: var(--schopurp);
 }
-
-/* .project-nav {
-  padding: 10px 0;
-} */
 
 .proj-nav-body {
   font-size: 0.9rem;
@@ -381,10 +379,6 @@ h6 {
   right: 10px;
 }
 
-/* .work-row {
-  gap: 0.6rem;
-} */
-
 .project {
   background-color: var(--schogrey);
   transition: all 0.6s;
@@ -393,8 +387,17 @@ h6 {
   justify-content: center;
 }
 
+.project a {
+  height: 100%;
+  width: 100%;
+}
+
 .light-mode .project {
-  background-color: var(--scholmpale);
+  background-color: var(--schostone);
+}
+
+.light-mode .project:hover {
+  background-color: var(--schoclay);
 }
 
 .row.project:hover {
@@ -429,10 +432,18 @@ img:hover {
   color: var(--scholight);
 }
 
+.light-mode .p-title {
+  color: var(--schoonyx);
+}
+
 .p-desc {
   font-size: 1rem;
   color: #b8bdbf;
   margin-bottom: 0;
+}
+
+.light-mode .p-desc {
+  color: var(--schoash);
 }
 
 /* ABOUT ME */
@@ -642,6 +653,10 @@ footer {
   background-color: #1c1e20;
   font-size: 0.76rem;
   color: #a6abad;
+}
+
+.light-mode footer {
+  background-color: var(--schopearl);
 }
 
 .footer-soc {
