--- a/src/App.css
+++ b/src/App.css
@@ -230,6 +230,10 @@ button.g2:hover,
 /* margin-right: 5px; 
 }*/
 
+figure {
+  margin: 0;
+}
+
 .project-card {
   position: relative;
   overflow: hidden;
