--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@ body {
 }
 
 .container {
-  max-width: 1480px;
+  max-width: 1400px;
 }
 
 @media screen and (min-width: 1440px) {
@@ -656,7 +656,7 @@ h6 {
   transition: all 0.6s;
 }
 
-img:hover {
+.design img:hover {
   cursor: pointer;
 }
 
@@ -888,7 +888,8 @@ p.intro {
   background: var(--schogrey);
   transition: all 0.6s;
 }
-.proj-img:hover {
+
+.design .proj-img:hover {
   transform: scale(1.02);
 }
 
