--- a/src/App.css
+++ b/src/App.css
@@ -61,21 +61,24 @@ main.light-mode {
 
 a {
   color: var(--scholime);
-  text-decoration: underline;
+  text-decoration: underline var(--scholime);
   transition: all 0.3s ease;
+  text-underline-offset: 3px;
 }
 
 .light-mode a {
   color: var(--schoiris);
+  text-decoration: underline var(--schoiris);
 }
 
 .light-mode a:hover {
+  text-decoration-color: transparent;
   color: var(--schoiris);
 }
 
 a:hover {
+  text-decoration-color: transparent;
   color: var(--scholime);
-  text-decoration: none;
 }
 
 /* MAIN NAVIGATION */
@@ -679,6 +682,12 @@ h6 {
   position: fixed;
   bottom: 65px;
   right: 10px;
+  color: var(--schodark);
+  transition: all 0.4s;
+}
+
+.light-mode #btn-back-to-top {
+  color: var(--scholight);
 }
 
 .project {
@@ -819,6 +828,25 @@ h6 {
   background: transparent;
 }
 
+.home-contact {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 320px;
+  max-width: 60%;
+  margin: 0 auto;
+  padding: 2rem 13%;
+  border: 2px solid var(--schogrey);
+}
+
+.home-contact p {
+  margin-bottom: 0;
+}
+
+.light-mode .home-contact {
+  border: 2px solid var(--schoclay);
+}
+
 /* CONTACT FORM PAGE */
 
 .contact-block {
@@ -875,20 +903,19 @@ form .form-control::placeholder {
   border: 2px solid var(--scholapis);
 }
 
-.email-big {
+a.email-big {
+  display: inline-block;
   font-size: 2rem;
-  transition: all 0.6s;
+  transition: all 0.8s;
   padding: 0.4rem 0.6rem;
-  margin-top: 0.3rem;
+  margin-top: 0.4rem;
+  margin-bottom: 0.4rem;
   border: 2px solid transparent;
+  text-decoration: none;
 }
 
 .email-big:hover {
-  border-bottom: 2px solid var(--schogreen);
-}
-
-.light-mode .email-big:hover {
-  border-bottom: 2px solid var(--scholapis);
+  transform: scale(1.04);
 }
 
 /* PROJECT PAGE */
@@ -984,10 +1011,11 @@ p.intro {
 /* FOOTER */
 
 footer {
+  font-family: neue-haas-grotesk-text, sans-serif;
   margin-top: 2rem;
   padding: 1rem 0;
   background-color: #1c1e20;
-  font-size: 0.76rem;
+  font-size: 0.86rem;
   color: #a6abad;
 }
 
@@ -999,7 +1027,13 @@ footer {
   color: var(--schoash);
 }
 .footer-soc {
-  text-align: right;
+  display: flex;
+  gap: 10px;
+  justify-content: flex-end;
+  list-style-type: none;
+  align-self: center;
+  margin: 0;
+  letter-spacing: 0.025rem;
 }
 
 .social-icons {
@@ -1009,10 +1043,27 @@ footer {
   justify-content: center;
 }
 
-.social-icons button {
+.social-icons a {
   background-color: transparent;
   color: var(--scholight);
   border: 0;
+}
+
+.social-icons i {
+  font-size: 1.5rem;
+  transition: all 0.5s;
+}
+
+.social-icons i:hover {
+  color: var(--schopurp);
+}
+
+.light-mode .social-icons i:hover {
+  color: var(--schoiris);
+}
+
+.light-mode .social-icons a {
+  color: #695d54;
 }
 
 /* Media Queries */
