project pages setup

--- a/src/App.css
+++ b/src/App.css
@@ -44,13 +44,19 @@ body {
   font-family: "neue-haas-grotesk-text", sans-serif;
   font-weight: 400;
   font-style: normal;
-  font-size: 18px;
+  font-size: 17px;
+  min-height: 100vh;
 }
 
 main {
   background: var(--schodark);
   color: var(--scholight);
   transition: all 0.4s ease;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  align-items: stretch;
+  min-height: 100vh;
 }
 
 main.light-mode {
@@ -79,6 +85,15 @@ a {
 a:hover {
   text-decoration-color: transparent;
   color: var(--scholime);
+}
+
+/* 404 Page */
+
+.not-found {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  flex: 1;
 }
 
 /* MAIN NAVIGATION */
@@ -724,6 +739,15 @@ h6 {
   border: 1px solid rgb(219 240 147 / 13%);
 }
 
+.proj-links li a:hover {
+  border-radius: 18px;
+  background: var(--schogrey);
+}
+
+.light-mode .proj-links li a:hover {
+  background: var(--scholight);
+}
+
 .light-mode .proj-links li a {
   color: var(--schoiris);
   font-weight: 600;
@@ -915,7 +939,7 @@ h6 {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  min-height: 300px;
+  min-height: 260px;
   max-width: 60%;
   margin: 0 auto;
   padding: 2rem 10%;
@@ -1031,16 +1055,19 @@ a.email-big {
   margin-bottom: 0;
 }
 
-button.back-link {
-  text-decoration: none;
+.back-link {
+  text-decoration: underline;
+  text-decoration-color: var(--scholime);
   font-size: 1rem;
   color: var(--scholime);
   background-color: transparent;
   border: none;
+  transition: all 0.3s;
+  text-underline-offset: 3px;
 }
 
-button.back-link:hover {
-  text-decoration: underline;
+.back-link:hover {
+  text-decoration-color: transparent;
 }
 
 .next-link i {
@@ -1052,6 +1079,15 @@ button.back-link:hover {
 .back-link i {
   padding-right: 15px;
   color: var(--scholight);
+}
+
+.light-mode .back-link {
+  color: var(--schoiris);
+  text-decoration-color: var(--schoiris);
+}
+
+.light-mode .back-link i {
+  color: var(--schoash);
 }
 
 .proj-desc {
