--- a/src/App.css
+++ b/src/App.css
@@ -1217,7 +1217,7 @@ footer {
 /* Media Queries */
 
 @media only screen and (max-width: 600px) {
-  .navbar-nav {
+  /* .navbar-nav {
     position: absolute;
     left: 0;
     width: 100% !important;
@@ -1225,9 +1225,12 @@ footer {
     background-color: #212326;
     justify-content: center;
     align-items: center;
-  }
+  } */
   .navbar {
     background-color: #212326;
+  }
+  .light-mode .navbar {
+    background-color: var(--schopearl);
   }
   .header {
     padding: 1rem 0.75rem 1.3rem;
