--- a/src/App.css
+++ b/src/App.css
@@ -848,7 +848,6 @@ h6 {
   font-size: 1.2rem;
   font-weight: 500;
   margin-bottom: 0.23rem;
-  letter-spacing: 0.02rem;
   color: var(--scholight);
   font-family: "neue-haas-grotesk-text", sans-serif;
 }
@@ -862,6 +861,7 @@ h6 {
   color: #b8bdbf;
   margin-bottom: 0;
   line-height: 1.4;
+  font-size: 0.98rem;
 }
 
 .light-mode .p-desc {
@@ -1055,6 +1055,13 @@ a.email-big {
   margin-bottom: 0;
 }
 
+.pp-info {
+  display: flex;
+  gap: 20px;
+  flex-direction: row;
+  align-items: center;
+}
+
 .back-link {
   text-decoration: underline;
   text-decoration-color: var(--scholime);
@@ -1092,10 +1099,6 @@ a.email-big {
 
 .proj-desc {
   font-size: 16px;
-}
-.link-icon {
-  margin-right: 10px;
-  font-size: 0.92rem;
 }
 
 h1.mb-3 {
@@ -1153,6 +1156,18 @@ p.intro {
   display: inline-block;
   padding: 12px 18px;
   border: 1.5px solid var(--schogrey);
+}
+
+.tech {
+  font-family: "forma-djr-mono";
+  font-size: medium;
+  letter-spacing: 1px;
+  color: var(--schoaccent);
+}
+
+.plink-cont i {
+  font-size: 0.78rem;
+  padding-left: 8px;
 }
 
 /* FOOTER */
