--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,20 @@ body {
   }
 }
 
+:focus-visible,
+.hamburger-react:focus-visible,
+.nav-link:focus-visible,
+.accordion-button.nav-link.collapsed:focus-visible {
+  outline: 3px solid black;
+  outline-offset: 1px;
+  box-shadow: none;
+  transition: none !important;
+}
+
+.accordion-button.nav-link:focus-visible {
+  outline: 3px dashed var(--schoiris);
+}
+
 :root {
   --schodark: #212326;
   --scholight: #f5fcff;
@@ -150,7 +164,7 @@ a:hover {
 .theme-toggle {
   min-width: 48px;
   min-height: 48px;
-  padding-right: 18px;
+  margin-right: 10px;
 }
 
 .navbar-toggler:not(.collapsed) .navbar-toggler-icon {
